--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/rt3norio/typescriptStudy#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.13",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.1.3"
   }
 }
