--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "jest:init": "jest --init"
+    "test:staged": "jest"
   },
   "repository": {
     "type": "git",
