--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
 vscode:
   extensions:
     - dbaeumer.vscode-eslint@2.1.8:02aHhbJ0Q4aGdjHXlTdVKg==
+    - Orta.vscode-jest@4.0.0-alpha.1:TuNngpN2TTsC/Ck1qhIwrg==
